added some error handling

--- a/PostGradWork/SampleATMProject/ATMProject/ATMProject/Views/Home/Index.cshtml
+++ b/PostGradWork/SampleATMProject/ATMProject/ATMProject/Views/Home/Index.cshtml
@@ -14,7 +14,8 @@
             <div class="center">
                 <h2>Already a member?</h2>
                 <h3>Please input your pin.</h3>
-                <input />
+                <!---->
+                <input type="number" min="0000" max="99999999" /> 
             </div>
         </div>
     </div>
