started more on the index page... still trying to decide how I want it to look

--- a/PostGradWork/SampleATMProject/ATMProject/ATMProject/Views/Shared/_Layout.cshtml
+++ b/PostGradWork/SampleATMProject/ATMProject/ATMProject/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="container body-content">
+    <div class="body-content">
         <div class="center">
             <h1>Virtual Automated Teller Machine</h1>
         </div>
