--- a/PostGradWork/SampleATMProject/ATMProject/ATMProject/Content/Site.css
+++ b/PostGradWork/SampleATMProject/ATMProject/ATMProject/Content/Site.css
@@ -1,7 +1,7 @@
 ﻿body {
-    background-color: #FAF9F9;
     padding-top: 30px;
     padding-bottom: 30px;
+    background-color: lightgray;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -15,12 +15,9 @@
     margin-bottom: 25px;
     margin-left: 25px;
     margin-right: 25px;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    padding-left: 15px;
-    padding-right: 15px;
-    background-color: #BEE3DB;
+    padding: 30px;
     border-radius: 15px;
+    background-color: gray;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -35,15 +32,8 @@
     align-content: center;
 }
 
-h1, 
-h2,
-h3 {
-    color: #555B6E;
-}
-
-h4,
-h5,
-h6,
-p {
-    color: #89B0AE;
+.container {
+    padding: 30px;
+    background-color: green;
+    color: black;
 }
