--- a/PostGradWork/SampleATMProject/ATMProject/ATMProject/Views/Shared/_Layout.cshtml
+++ b/PostGradWork/SampleATMProject/ATMProject/ATMProject/Views/Shared/_Layout.cshtml
@@ -12,7 +12,18 @@
         <div class="center">
             <h1>Virtual Automated Teller Machine</h1>
         </div>
-        @RenderBody()
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
+                <div class="jumbotron">
+                    <div class="center">
+                        <div class="container">
+                            @RenderBody()
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>       
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - Tiffany Jansen ~ Virtual Automated Teller Machine</p>
