--- a/PostGradWork/SampleATMProject/ATMProject/ATMProject/Views/Shared/_Layout.cshtml
+++ b/PostGradWork/SampleATMProject/ATMProject/ATMProject/Views/Shared/_Layout.cshtml
@@ -25,6 +25,6 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
