fixed the Balance View... which also fixed the deposit one...

--- a/PostGradWork/SampleATMProject/ATMProject/ATMProject/Views/Home/Balance.cshtml
+++ b/PostGradWork/SampleATMProject/ATMProject/ATMProject/Views/Home/Balance.cshtml
@@ -22,7 +22,7 @@
     <div class="col-md-4">
         <div class="container-fluid">
             <h3>@Html.DisplayNameFor(model => model.SavingsAmount)</h3>
-            <h3>$@string.Format("{0:C}", Html.DisplayFor(model => model.CheckingAmount))</h3>
+            <h3>$@string.Format("{0:C}", Html.DisplayFor(model => model.SavingsAmount))</h3>
         </div>
     </div>
 </div>
