--- a/PostGradWork/SampleATMProject/ATMProject/ATMProject/Views/Home/Deposit.cshtml
+++ b/PostGradWork/SampleATMProject/ATMProject/ATMProject/Views/Home/Deposit.cshtml
@@ -9,6 +9,7 @@
 <div class="container-fluid">
     <div class="center">
         <h2>Make a Deposit</h2>
+        <h3>@ViewBag.Error</h3>
     </div>
 </div>
 <form method="post">
@@ -18,8 +19,8 @@
                 <div class="center">
                     <h2>Select the account</h2>
                     <select name="account" style="width: 200px;">
-                        <option value="checking">Checking</option>
-                        <option value="savings">Savings</option>
+                        <option value="check">Checking</option>
+                        <option value="save">Savings</option>
                     </select>
                 </div>
             </div>
