everything is working except the transfer one

--- a/PostGradWork/SampleATMProject/ATMProject/ATMProject/Views/Home/Withdrawl.cshtml
+++ b/PostGradWork/SampleATMProject/ATMProject/ATMProject/Views/Home/Withdrawl.cshtml
@@ -1,19 +1,22 @@
 ﻿@model ATMProject.Models.User
 
 @{
-    ViewBag.Title = "Deposit";
+    ViewBag.Title = "Withdrawl";
 }
 
 <br /><br />
 
 <div class="container-fluid">
     <div class="center">
-        <h2>Make a Deposit</h2>
+        <h2>Make a Withdrawl</h2>
         <h3>@ViewBag.Error</h3>
     </div>
 </div>
 <form method="post">
     <div class="row">
+        <div class="center">
+            <h3>@ViewBag.MoneyError</h3>
+        </div>
         <div class="col-md-6">
             <div class="container-fluid">
                 <div class="center">
@@ -28,7 +31,7 @@
         <div class="col-md-6">
             <div class="container-fluid">
                 <div class="center">
-                    <h2>Amount to Deposit</h2>
+                    <h2>Amount to Withdrawl</h2>
                     <input name="amount" type="number" min="0.01" step="0.01" style="width: 200px;" />
                 </div>
             </div>
