finished. Just gotta test and I'll be done

--- a/PostGradWork/SampleATMProject/ATMProject/ATMProject/Views/Home/Transfer.cshtml
+++ b/PostGradWork/SampleATMProject/ATMProject/ATMProject/Views/Home/Transfer.cshtml
@@ -23,7 +23,7 @@
             <div class="col-md-4">
                 <h3>To:</h3>
                 <select name="endAccount" id="endAccount" style="width: 200px;">
-                    <option value="save">Savings ($@string.Format("{0:C}", Html.DisplayFor(model => model.SavingsAmount)))</option>
+                    <option>Savings ($@string.Format("{0:C}", Html.DisplayFor(model => model.SavingsAmount)))</option>
                 </select>
             </div>
             <div class="col-md-4">
