--- a/PostGradWork/SampleATMProject/ATMProject/ATMProject/Views/Home/Deposit.cshtml
+++ b/PostGradWork/SampleATMProject/ATMProject/ATMProject/Views/Home/Deposit.cshtml
@@ -29,7 +29,7 @@
             <div class="container-fluid">
                 <div class="center">
                     <h2>Amount to Deposit</h2>
-                    <input name="amount" type="number" min="0.01" step="0.01" style="width: 200px;" />
+                    <input name="amount" type="number" min="0.01" step="0.01" max="99999.99" style="width: 200px;" />
                 </div>
             </div>
         </div>
