--- a/PostGradWork/SampleATMProject/ATMProject/ATMProject/Views/Home/Transfer.cshtml
+++ b/PostGradWork/SampleATMProject/ATMProject/ATMProject/Views/Home/Transfer.cshtml
@@ -7,6 +7,7 @@
 <div class="container-fluid">
     <div class="center">
         <h2>Transfer Between Accounts</h2>
+        <div id="error"><h3 style="color:red;">@ViewBag.Error</h3></div>
     </div>
 </div>
 <form method="post">
@@ -28,7 +29,7 @@
             </div>
             <div class="col-md-4">
                 <h3>Amount:</h3>
-                <input name="amount" type="number" min="0.01" step="0.01" style="width: 200px;" />
+                <input name="amount" type="number" max="100000000000000" min="0.01" step="0.01" size="10" style="width: 200px;" />
             </div>
         </div>
         @Html.Hidden(Model.PIN)
