--- a/PostGradWork/SampleATMProject/ATMProject/ATMProject/Views/Shared/_Layout.cshtml
+++ b/PostGradWork/SampleATMProject/ATMProject/ATMProject/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-10">
-            <div class="jumbotron">                
+            <div class="jumbotron">
                 <div class="container">
                     @RenderBody()
                 </div>
@@ -26,5 +26,6 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("Scripts", required: false)
+    <script type="text/javascript" src="~/Scripts/errorMessages.js"></script>
 </body>
 </html>
