last minute stuff

--- a/PostGradWork/GitHubAPITest/GitHubAPITest/GitHubAPITest/Views/Home/Index.cshtml
+++ b/PostGradWork/GitHubAPITest/GitHubAPITest/GitHubAPITest/Views/Home/Index.cshtml
@@ -90,7 +90,7 @@
         }
     </div>
     <div class="row">
-        <div class="col-12 commits text-center"></div>
+        <div class="col-12 commits text-center table-responsive"></div>
     </div>
 </div>
 
