--- a/PostGradWork/GitHubAPITest/GitHubAPITest/GitHubAPITest/Content/Site.css
+++ b/PostGradWork/GitHubAPITest/GitHubAPITest/GitHubAPITest/Content/Site.css
@@ -25,6 +25,7 @@ dd.no-overflow {
 table {
     margin-left: auto;
     margin-right: auto;
+    overflow-x: auto;
 }
 
 .table thead {
@@ -36,8 +37,22 @@ table {
 
 .table tbody {
     border: 1px solid #ffc107;
+    max-height: 500px;
+    overflow: auto;
+    width: 100%;
 }
     .table tbody td {
         border: 1px solid #ffc107;
         vertical-align: middle;
     }
+.fixed-width {
+    width: 200px !important;
+}
+.commits {
+    position: relative;
+    top: 0;
+    width: 100vw;
+    width: 100%;
+    overflow-x: auto;
+    overflow-y: hidden;
+}
